Bug fix related to visibility of toggleAll button

--- a/css/jquery-comments.css
+++ b/css/jquery-comments.css
@@ -134,7 +134,7 @@ select {
 	left: 0;
 }
 
-.comments ul#comment-list li.comment {
+.comments ul#comment-list li {
 	width: 100%;
 	display: inline-block;
 	padding: .5em 0;
@@ -142,10 +142,6 @@ select {
 
 .comments ul#comment-list li.comment:last-child {
 	padding-bottom: 0;
-}
-
-.comments ul#comment-list li.comment:first-child {
-	padding-top: 0;
 }
 
 .comments ul#comment-list li > .profile-picture {
@@ -198,6 +194,10 @@ select {
 
 .comments ul#comment-list li.comment .child-comments {
 	padding-top: 0.5em;
+}
+
+.comments ul#comment-list li.comment .child-comments li.toggle-all {
+	padding-top: 0;
 }
 
 .comments ul#comment-list li.comment .child-comments li.toggle-all span:first-child {
